serving data from firebase through typescript controller

--- a/src/client/app/territory/territory.html
+++ b/src/client/app/territory/territory.html
@@ -6,6 +6,7 @@
           <div ht-widget-header title="{{vm.title}}"></div>
           <div class="widget-content user">
             <h3>Hello World from Territory</h3>
+            <pre>{{vm.territories |json }}</pre>
           </div>
           <div class="widget-foot">
             <div class="clearfix"></div>
