Territory detail navigation added.  Also added material design elements

--- a/src/client/app/territory/territory.detail.html
+++ b/src/client/app/territory/territory.detail.html
@@ -5,14 +5,7 @@
         <div class="widget wviolet">
           <div ht-widget-header title="{{vm.title}}"></div>
           <div class="widget-content user">
-            <h3>Hello World from Territory</h3>
-            <div class="col-md-4" ng-repeat="territory in vm.territories">
-              <div class="well" style="margin:5px; padding:5px;" ng-click="vm.goToDetail(territory.num)">
-                {{territory.num}} <br />
-                {{territory.description}} <br />
-                {{territory.status}} <br />
-              </div>
-            </div>
+              <h1>Territory Detail Page</h1>
           </div>
           <div class="widget-foot">
             <div class="clearfix"></div>
