--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,7 +18,8 @@
 
   <!-- build:css styles/lib.css -->
   <!-- bower:css -->
-  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
+  <link rel="stylesheet" href="/bower_components/bootstrap-material-design/dist/css/ripples.css" />
   <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="/bower_components/toastr/toastr.css" />
   <!-- endbower -->
@@ -52,6 +53,9 @@
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+  <script src="/bower_components/bootstrap-material-design/dist/js/material.js"></script>
+  <script src="/bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
   <script src="/bower_components/extras.angular.plus/ngplus-overlay.js"></script>
   <script src="/bower_components/moment/moment.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -92,7 +96,9 @@
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
   <script src="/src/client/app/territory/territory.controller.js"></script>
+  <script src="/src/client/app/territory/territory.js"></script>
   <script src="/src/client/app/territory/territory.route.js"></script>
+  <script src="/src/client/app/territory/territoryDetail.controller.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
 
