adding territory objects

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -95,6 +95,7 @@
   <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
+  <script src="/src/client/app/territory/address.js"></script>
   <script src="/src/client/app/territory/territory.controller.js"></script>
   <script src="/src/client/app/territory/territory.js"></script>
   <script src="/src/client/app/territory/territory.route.js"></script>
