Page navigation to and from detail page

--- a/src/client/app/territory/territory.detail.html
+++ b/src/client/app/territory/territory.detail.html
@@ -6,6 +6,7 @@
           <div ht-widget-header title="{{vm.title}}"></div>
           <div class="widget-content user">
               <h1>Territory Detail Page</h1>
+              <button ng-click="vm.goToList()" class="btn btn-default">Go To List</button>
           </div>
           <div class="widget-foot">
             <div class="clearfix"></div>
