--- a/src/client/specs.html
+++ b/src/client/specs.html
@@ -52,6 +52,9 @@
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+  <script src="/bower_components/bootstrap-material-design/dist/js/material.js"></script>
+  <script src="/bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
   <script src="/bower_components/extras.angular.plus/ngplus-overlay.js"></script>
   <script src="/bower_components/moment/moment.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
@@ -86,15 +89,20 @@
   <script src="/src/client/app/core/constants.js"></script>
   <script src="/src/client/app/core/core.route.js"></script>
   <script src="/src/client/app/core/dataservice.js"></script>
-  <script src="/src/client/app/core/firebaseDataService.js"></script>
+  <script src="/src/client/app/core/firebaseData.service.js"></script>
   <script src="/src/client/app/dashboard/dashboard.controller.js"></script>
   <script src="/src/client/app/dashboard/dashboard.route.js"></script>
   <script src="/src/client/app/layout/ht-sidebar.directive.js"></script>
   <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
+  <script src="/src/client/app/territory/address.js"></script>
   <script src="/src/client/app/territory/territory.controller.js"></script>
+  <script src="/src/client/app/territory/territory.js"></script>
   <script src="/src/client/app/territory/territory.route.js"></script>
+  <script src="/src/client/app/territory/territoryDetail.controller.js"></script>
+  <script src="/src/client/app/territory/territoryService.js"></script>
+  <script src="/src/client/app/territory/unit.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
 
@@ -114,6 +122,7 @@
   <script src="/src/client/app/layout/shell.controller.spec.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.spec.js"></script>
   <script src="/src/client/app/territory/territory.controller.spec.js"></script>
+  <script src="/src/client/app/territory/territoryDetail.controller.spec.js"></script>
   <!-- endinject -->
 
   <!-- inject:templates:js -->
