--- a/src/client/app/territory/territory.html
+++ b/src/client/app/territory/territory.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6" ng-repeat="territory in vm.territories">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3" ng-repeat="territory in vm.territories">
             <div class="well" style="margin:5px; padding:5px;" ng-click="vm.goToDetail(territory.num)">
                 {{territory.num}}
                 <br /> {{territory.description}}
