--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,6 +15,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <base href="/">
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
 
   <!-- build:css styles/lib.css -->
   <!-- bower:css -->
