--- a/src/client/app/territory/territory.detail.html
+++ b/src/client/app/territory/territory.detail.html
@@ -4,7 +4,10 @@
     <br /> {{vm.territory.description}}
     <br /> {{vm.territory.status}}
     <br />
-    <button ng-click="vm.checkOut(vm.territory)" class="btn btn-primary">Check-out</button>
+    <select ng-model="vm.territory.type" ng-options="item as item for item in vm.territoryTypes"></select>
+    <br>
+    <button ng-click="vm.save(vm.territory)" class="btn btn-primary">Save</button>
+    <button ng-click="vm.checkOut(vm.territory)" class="btn btn-small btn-default">Check-out</button>
     <button ng-click="vm.goToList()" class="btn btn-default">Go To List</button>
     <!--<pre>{{vm.territory | json }}</pre>-->
     <div class="well" ng-repeat="checkout in vm.territory.checkouts">
