--- a/src/client/specs.html
+++ b/src/client/specs.html
@@ -97,11 +97,11 @@
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
   <script src="/src/client/app/territory/address.js"></script>
-  <script src="/src/client/app/territory/territory.controller.js"></script>
+  <script src="/src/client/app/territory/territory.detail.controller.js"></script>
   <script src="/src/client/app/territory/territory.js"></script>
+  <script src="/src/client/app/territory/territory.list.controller.js"></script>
   <script src="/src/client/app/territory/territory.route.js"></script>
-  <script src="/src/client/app/territory/territoryDetail.controller.js"></script>
-  <script src="/src/client/app/territory/territoryService.js"></script>
+  <script src="/src/client/app/territory/territory.service.js"></script>
   <script src="/src/client/app/territory/unit.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
@@ -121,8 +121,9 @@
   <script src="/src/client/app/layout/ht-sidebar.directive.spec.js"></script>
   <script src="/src/client/app/layout/shell.controller.spec.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.spec.js"></script>
-  <script src="/src/client/app/territory/territory.controller.spec.js"></script>
-  <script src="/src/client/app/territory/territoryDetail.controller.spec.js"></script>
+  <script src="/src/client/app/territory/territory.detail.controller.spec.js"></script>
+  <script src="/src/client/app/territory/territory.list.controller.spec.js"></script>
+  <script src="/src/client/app/territory/territory.service.spec.js"></script>
   <!-- endinject -->
 
   <!-- inject:templates:js -->
