--- a/src/client/index.html
+++ b/src/client/index.html
@@ -97,13 +97,14 @@
   <script src="/src/client/app/layout/ht-top-nav.directive.js"></script>
   <script src="/src/client/app/layout/shell.controller.js"></script>
   <script src="/src/client/app/layout/sidebar.controller.js"></script>
-  <script src="/src/client/app/territory/address.js"></script>
-  <script src="/src/client/app/territory/territory.detail.controller.js"></script>
-  <script src="/src/client/app/territory/territory.js"></script>
-  <script src="/src/client/app/territory/territory.list.controller.js"></script>
+  <script src="/src/client/app/territory/detail/territory.detail.controller.js"></script>
+  <script src="/src/client/app/territory/list/territory.list.controller.js"></script>
+  <script src="/src/client/app/territory/models/address.js"></script>
+  <script src="/src/client/app/territory/models/territory.js"></script>
+  <script src="/src/client/app/territory/models/unit.js"></script>
   <script src="/src/client/app/territory/territory.route.js"></script>
   <script src="/src/client/app/territory/territory.service.js"></script>
-  <script src="/src/client/app/territory/unit.js"></script>
+  <script src="/src/client/app/territory/unit/territory.unit.controller.js"></script>
   <script src="/src/client/app/widgets/ht-widget-header.directive.js"></script>
   <!-- endinject -->
 
