--- a/src/client/app/territory/list/territory.list.html
+++ b/src/client/app/territory/list/territory.list.html
@@ -1,29 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <div ng-repeat="type in vm.territoryTypes">
-                <button class="btn btn-sm btn-raised" name="typeFilter" ng-click="vm.filterTerritory(type.value)">
-                    {{ type.label }}
-                </button>
-            </div>
-            <div class="btn-group btn-group-justified btn-group-raised">
-                <a href="javascript:void(0)" class="btn " ng-repeat="type in vm.territoryTypes" ng-click="vm.filterTerritory(type.value)">
+            <div class="bs-component">
+                <a href="javascript:void(0)" class="btn btn-raised btn-default" ng-repeat="type in vm.territoryTypes" ng-click="vm.filterTerritory(type.value)">
                 {{type.label}}
                 <div class="ripple-container"></div>
             </a>
             </div>
         </div>
-        <p class="bs-component">
-            <a href="javascript:void(0)" class="btn btn-raised active"><code>.active</code><div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-default">Default<div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-primary">Primary<div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-success">Success<div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-info">Info<div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-warning">Warning<div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-danger">Danger<div class="ripple-container"></div></a>
-            <a href="javascript:void(0)" class="btn btn-raised btn-link">Link</a>
-            <div id="source-button" class="btn btn-primary btn-xs" style="display: block;">&lt; &gt;</div>
-        </p>
     </div>
     <div class="list-group">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" ng-repeat="territory in vm.filteredTerritories">
