Update address save function to be cleaner and add watcher to detect changes to addresses list and generate

--- a/src/client/app/territory/list/territory.list.html
+++ b/src/client/app/territory/list/territory.list.html
@@ -18,9 +18,9 @@
                         </h4>
 
                     <p class="list-group-item-text">
-                        <span class="col-xs-6">{{territory.type}}</span>
-                        <span class="col-xs-6">{{territory.status}}</span>
-                        <span class="col-xs-12">{{territory.description}}</span>
+                        <span class="col-xs-12">Type: {{territory.type.label}}</span>
+                        <span class="col-xs-12">Status: {{territory.status}}</span>
+                        <span class="col-xs-12">Description: {{territory.description}}</span>
                     </p>
                 </div>
                 <div class="row-picture pull-left">
